Solucion de todo ahora si (definitivo)